--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,68 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$Demo-1-primary: mat.define-palette(mat.$indigo-palette);
+$Demo-1-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$Demo-1-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$Demo-1-theme: mat.define-light-theme((
+  color: (
+    primary: $Demo-1-primary,
+    accent: $Demo-1-accent,
+    warn: $Demo-1-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($Demo-1-theme);
+
+
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: 'Hammersmith';
+  src: url('assets/fonts/Hammersmith/HammersmithOne-Regular.woff2') format('woff2'),
+    url('assets/fonts/Hammersmith/HammersmithOne-Regular.woff') format('woff');
+}
+@font-face {
+  font-family: 'PlayfairDisplay';
+  src: url('assets/fonts/PlayfairDisplay/PlayfairDisplay-Regular.woff2') format('woff2'),
+    url('assets/fonts/PlayfairDisplay/PlayfairDisplay-Regular.woff') format('woff');
+}
+@font-face {
+  font-family: 'PlayfairDisplay-Italic';
+  src: url('assets/fonts/PlayfairDisplay/PlayfairDisplay-Italic.woff2') format('woff2'),
+    url('assets/fonts/PlayfairDisplay/PlayfairDisplay-Italic.woff') format('woff');
+}
+@font-face {
+  font-family: 'Poppins';
+  src: url('assets/fonts/Poppins/Poppins-Regular.woff2') format('woff2'),
+    url('assets/fonts/Poppins/Poppins-Regular.woff') format('woff');
+}
+@import 'assets/sass/variables.scss';
+
+
+@import '~@angular/material/theming';
+$custom-typography: mat-typography-config(
+  $font-family: $fontBody
+);
+@include mat-core($custom-typography);
+
+html, body { height: 100%; }
+body { margin: 0; font-family: $fontBody, sans-serif; background-color: $color1;}
