landing-page/banner-animation

--- a/src/app/app-header/app-header.component.scss
+++ b/src/app/app-header/app-header.component.scss
@@ -1,4 +1,6 @@
 @import "../../assets/sass/variables.scss";
+@import "../../assets/sass/mixins";
+
 
 header{
     display: flex;
@@ -28,12 +30,9 @@ header{
                         color: $color2;
                         text-decoration: none;
                         font-size: $fontSize-xs;
-                        font-family: 'Hammersmith';
+                        font-family: $fontSecondaire;
                         text-transform: uppercase;
-                        -webkit-transition: all 0.3s ease-in-out;
-                        -moz-transition: all 0.3s ease-in-out;
-                        -o-transition: all 0.3s ease-in-out;
-                        transition: all 0.3s ease-in-out;
+                        @include transition();
                         &:hover{
                             color: $color4;
                         }
