--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -12,8 +12,8 @@ $color4: #289DD2;
 
 // Font
 
-$fontPrincipal: 'Hammersmith';
-$fontSecondaire: 'PlayfairDisplay-Italic';
+$fontPrincipal: 'PlayfairDisplay-Italic';
+$fontSecondaire: 'Hammersmith';
 $fontBody: 'Poppins';
 
 $fontSize-xs:16px;
