landing-page/about

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <app-app-header></app-app-header>
 <app-banner></app-banner>
+<main>
+    <app-about-section></app-about-section>
+    <app-services-section></app-services-section>
+    <app-testimonial-section></app-testimonial-section>
+</main>
+<app-app-footer></app-app-footer>
