--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -17,6 +17,8 @@ $fontSecondaire: 'Hammersmith';
 $fontBody: 'Poppins';
 
 $fontSize-xs:16px;
+$fontSize-xs2:18px;
+$fontSize-xs3:20px;
 $fontSize-s:24px;
 $fontSize-m:32px;
 $fontSize-l:40px;
